log
Thu Apr 30 08:11:42 PM UTC 2026: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:52:5: error: expected ‘;’ before ‘map’
   52 |     map->lower_than = lower_than;
      |     ^~~
eae8fbc
